k8s/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: fastapi-app
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - port: 8000
      targetPort: 8000
