k8s/fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: fastapi-app
spec:
  ingressClassName: nginx
  rules:
    - host: fastapi.local
      http:
        paths:
          # pgAdmin - musi być PRZED / żeby matchować jako pierwszy
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80

          # FastAPI - catchall dla reszty
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
